--- a/src/app/componentes/menu/menu.component.scss
+++ b/src/app/componentes/menu/menu.component.scss
@@ -17,13 +17,13 @@
     .overlay {
         background: $primary;
         background-image: linear-gradient( $primary 35%, transparentize( $rosa, .5 ));
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
         z-index: -1;
-        width: 100%;
+        width: 300px;
         height: 100%;
         opacity: .95;
     }
