[ Menú de navegación ] » Cambiar de color el icono del ítem activo completado

--- a/src/app/componentes/menu/menu.component.scss
+++ b/src/app/componentes/menu/menu.component.scss
@@ -101,6 +101,10 @@
             &:hover:not(.active) > a {
                 animation: meneo 1s;
             }
+            
+            &.active > a .icono {
+                color: red;
+            }
         }
 
         .submenu.segundo-nivel .item {
