--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 @import "~src/assets/styles/variables";
 
 // Placeholder
@@ -161,8 +160,9 @@ hr {
     padding: 35px 0;
     position: fixed;
     bottom: 0;
-    left: 0;
-    width: 100%;
+    left: 300px;
+    right: 0;
+    transition: .25s;
 
     .container {
         display: grid;
