--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,24 +1,25 @@
-<div id="login" class="animated fadeIn">
+<section id="login" class="animated fadeIn">
     
+    <!-- Título -->
     <h1 class="titulo">Diccionario</h1>
     
+    <!-- Formulario -->
     <form class="formulario-login" #formularioLogin="ngForm" (ngSubmit)="onSubmit( formularioLogin )">
 
         <!-- Email -->
         <div class="entrada email">
-            <small *ngIf="formularioLogin.submitted && formularioLogin.controls['email'].errors" class="validacion animated fadeIn">{{ mensajeErrorEmail }}</small>
             <input type="email" email placeholder="Email" required [(ngModel)]="usuario.email" name="email" autocomplete="off" spellcheck="false">
+            <small *ngIf="formularioLogin.submitted && formularioLogin.controls['email'].errors" class="validacion animated fadeIn">{{ mensajeErrorEmail }}</small>
         </div>
 
         <!-- Contraseña -->
         <div class="entrada clave">
-            <small *ngIf="formularioLogin.submitted && formularioLogin.controls['clave'].errors" class="validacion animated fadeIn">Este campo es obligatorio</small>
             <input type="password" placeholder="Contraseña" required [(ngModel)]="usuario.clave" name="clave" autocomplete="off" spellcheck="false">
+            <small *ngIf="formularioLogin.submitted && formularioLogin.controls['clave'].errors" class="validacion animated fadeIn">Este campo es obligatorio</small>
         </div>
 
         <!-- Botón -->
         <button type="submit" class="boton">
-            <!-- Enviar -->
             <i class="icono fa fa-plane" aria-hidden="true"></i>
             <i class="icono fa fa-plane" aria-hidden="true"></i>
         </button>
@@ -30,4 +31,4 @@
         </div>
     </form>
     <div class="overlay"></div>
-</div>
+</section>
