[ Gramática ] » Responsive actualizado

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -2,7 +2,7 @@
 <app-menu (onAbrirSidebar)="abrirSidebar( $event )"></app-menu>
 
 <!-- Contenido -->
-<div id="contenido">
+<div class="contenido">
     <div>
         <router-outlet></router-outlet>
     </div>
