--- a/src/app/componentes/login/login.component.scss
+++ b/src/app/componentes/login/login.component.scss
@@ -1,4 +1,3 @@
-
 @import "~src/assets/styles/variables";
 
 #login {
@@ -179,10 +178,8 @@
 
 @media only screen and ( min-width: $mobile ) {
 
-    #login {
-        .titulo {
-            left: 50px;
-            transform: none;
-        }
+    #login .titulo {
+        left: 50px;
+        transform: none;
     }
 }
