--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,7 +69,7 @@ h1 {
     color: black;
     font-size: 30px;
     font-weight: 700;
-    // font-family: 'Arsenal', sans-serif;
+    margin: 0;
 }
 
 hr {
@@ -78,8 +78,8 @@ hr {
     margin-bottom: 50px;
 }
 
-#contenido {
-    padding: 75px;
+.contenido {
+    padding: 75px 25px;
     margin-left: 300px;
     transition: margin-left .25s;
     
@@ -100,6 +100,12 @@ hr {
 
     h1 {
         font-size: 35px;
+    }
+}
+
+@media only screen and (min-width: $tablet) {
+    .contenido {
+        padding: 75px;
     }
 }
 
@@ -400,62 +406,6 @@ hr {
     }
     to {
         opacity: 1;
-    }
-}
-
-// ───────────────── //
-//     GRAMÁTICA     //
-// ───────────────── //
-
-#gramatica {
-
-    p {
-        color: black;
-        font-size: 15px;
-        margin-bottom: 35px;
-    }
-
-    span {
-        color: $primary;
-        font-style: italic;
-    }
-
-    .ejemplos {
-        background: linear-gradient( to right, transparentize( $primary, .95 ), transparentize( $primary, .9 ));
-        border-left: 1px solid $primary;
-        border-top-right-radius: 2px;
-        border-bottom-right-radius: 2px;
-        padding: 35px;
-        margin-left: 35px;
-        margin-bottom: 35px;
-
-        p {
-            color: $primary;
-            font-style: italic;
-
-            &:last-child {
-                margin-bottom: 0;
-            }
-
-            &.error {
-                color: red;
-
-                sup {
-                    font-size: 12px;
-                    font-style: normal;
-                    margin-left: 5px;
-                }
-            }
-        }
-
-        & + small {
-            display: block;
-            color: $texto;
-            font-size: 12px;
-            margin-top: -35px;
-            margin-left: 35px;
-            margin-bottom: 35px;
-        }
     }
 }
 
