[ Gramática ] » Responsive actualizado

--- a/src/app/componentes/gramatica/gramatica.component.html
+++ b/src/app/componentes/gramatica/gramatica.component.html
@@ -33,7 +33,7 @@
 
                 <p>Se utiliza con el <b>pasado perfecto</b> para expresar el deseo de haber hecho las cosas de manera distinta en el pasado (arrepentimiento)</p>
 
-                <div class="ejemplos">
+                <div class="ejemplos" style="margin-bottom: 0">
                     <p>I wish I had been paying attention during the lesson, now I feel lost!</p>
                 </div>
 
@@ -70,7 +70,7 @@
 
                 <p>Se utiliza <strong>get used to + verb <u>in gerund</u></strong> para algo que <u>todavía no se ha convertido</u> en una rutina, <u>estamos en el proceso</u></p>
 
-                <div class="ejemplos">
+                <div class="ejemplos" style="margin-bottom: 0">
                     <p>It's very hard to get used to working out every afternoon</p>
                     <p>I can't get used to sleeping in complete darkness during the night, I'm terrified!</p>
                 </div>
