--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,7 +75,7 @@ h1 {
 hr {
     display: block;
     border-color: $primary;
-    margin-bottom: 50px;
+    margin: 10px 0 50px;
 }
 
 .contenido {
