--- a/src/app/componentes/menu/menu.component.scss
+++ b/src/app/componentes/menu/menu.component.scss
@@ -9,7 +9,7 @@
     top: 0;
     left: 0;
     z-index: 50;
-    width: 300px;
+    width: 100%;
     height: 100%;
     overflow-y: auto;
     transition: .25s;
@@ -23,7 +23,7 @@
         right: 0;
         bottom: 0;
         z-index: -1;
-        width: 300px;
+        width: 100%;
         height: 100%;
         opacity: .95;
         transition: .25s;
@@ -210,5 +210,18 @@ ul {
 
     &:hover .barra {
         background: $rosa;       
+    }
+}
+
+// Mobile First
+
+@media only screen and (min-width: $mobile) {
+
+    #sidebar {
+        width: 300px;
+    
+        .overlay {
+            width: 300px;
+        }
     }
 }
